ändrat om filstruktur samt medelväder

--- a/backend/templates/HTMLsida2.html
+++ b/backend/templates/HTMLsida2.html
@@ -11,6 +11,8 @@
     <h1>Info om vald resa flygtid, flygplats, datum osv</h1>
 </div>
 
+<div id="weatherResult"></div>
+
 <div id="info_land" class="info">
     <h1> väder i spanien</h1>
 </div>
