--- a/backend/templates/search.html
+++ b/backend/templates/search.html
@@ -29,8 +29,13 @@
             <input type="text" name="whereTo" id="toInput" list="toList" placeholder="Type and airport code...">
             <datalist id="toList"></datalist>
 
-            <label for="date">Date</label>
-            <input type="date" name="date">
+            <label for="departureDate">Departure date</label>
+            <input type="date" id="departureDate" name="departureDate" required>
+
+            <label for="returnDate">Return date</label>
+            <input type="date" id="returnDate" name="returnDate" required>
+
+
         </div>
 
         <button id="searchForLocation"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search-icon lucide-search"><path d="m21 21-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg></button>
